--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ font-size: 30px;
 
 </h2>
 <p class="AbtText">
-  I’m a <strong>LuaU scripter</strong> with over <strong>3 months of hands-on experience</strong>, mainly working on game systems, scripts, and gameplay mechanics. I enjoy experimenting with ideas and turning them into something that actually works.
+  I’m a <strong>LuaU scripter</strong> with over <strong>6 months of experience</strong>, mainly working on game systems, scripts, and gameplay mechanics. I enjoy experimenting with ideas and turning them into something that actually works.
   <br><br>
   Besides scripting, I’m also a beginner <strong>web developer</strong> with experience in <strong>HTML, CSS, and JavaScript</strong>. I like building simple, clean, and functional websites while continuing to learn and improve my skills.
   <br><br>
@@ -543,6 +543,7 @@ document.querySelector(".Instagram").onclick = () => {
 </script>
 </body>
 </html>
+
 
 
 
